tests/invalid_nodepend/bigtest.err_exp
bigtest.m:005: Error: [38;5;203mmodule must start with a `:- module' declaration.[39;49m
bigtest.m:005: Error: module `bigtest' [38;5;203mshould start with[39;49m either an
bigtest.m:005:   [38;5;40m`:- interface' declaration[39;49m or an [38;5;40m`:- implementation'[39;49m
bigtest.m:005:   [38;5;40mdeclaration.[39;49m
bigtest.m:005:   The following assumes that the missing declaration is an
bigtest.m:005:   `:- implementation' declaration.
bigtest.m:005: Warning: the interface of module [38;5;87m`bigtest'[39;49m [38;5;203mdoes not export[39;49m
bigtest.m:005:   [38;5;203manything.[39;49m
bigtest.m:005:   To be useful, a module should export something. A file should
bigtest.m:005:   contain at least one declaration other than `:- import_module'
bigtest.m:005:   in its interface section(s). This would normally be a
bigtest.m:005:   `:- pred' or `:- func' declaration, or a `:- type', `:- inst',
bigtest.m:005:   `:- mode', `:- typeclass' or `:- instance' definition.
bigtest.m:005: Error: [38;5;87m`export_sym'[39;49m is [38;5;203mnot a valid declaration type.[39;49m
bigtest.m:006: Error: [38;5;87m`export_pred'[39;49m is [38;5;203mnot a valid declaration type.[39;49m
bigtest.m:007: Error: [38;5;87m`export_type'[39;49m is [38;5;203mnot a valid declaration type.[39;49m
bigtest.m:009: Error: clause for predicate [38;5;87m`fact'/0[39;49m [38;5;203mwithout[39;49m a corresponding
bigtest.m:009:   `:- pred' declaration.
bigtest.m:009: Inferred :- pred fact.
bigtest.m:010: Syntax error at token ':-': operator precedence error.
bigtest.m:013: Error: [38;5;87m`incorrect_declaration'[39;49m is [38;5;203mnot a valid declaration type.[39;49m
bigtest.m:015: Error: [38;5;203mno mode declaration[39;49m for predicate [38;5;87m`p'/1.[39;49m
bigtest.m:015:   (Use `--infer-modes' to enable mode inference.)
bigtest.m:030: Error: in definitions of equivalence types, [38;5;40mthe type name must[39;49m
bigtest.m:030:   [38;5;40mbe followed by `==',[39;49m not [38;5;203m`='.[39;49m
